fix too large gaps

--- a/src/blocks/action_button/_action_button.scss
+++ b/src/blocks/action_button/_action_button.scss
@@ -4,7 +4,7 @@
 .action_button {
   position: fixed;
   right: responsive.$mobile-x-space;
-  bottom: 30px;
+  bottom: 15px;
   left: responsive.$mobile-x-space;
   min-width: 285px;
   padding: 11px 0;
@@ -19,6 +19,7 @@
 
   @include responsive.apply-desktop {
     right: 50px;
+    bottom: 30px;
     left: unset;
 
     @include typography.title-2;
